[WARP-SPEED] Fix class is exposed outside of visibality scope warnings
(cherry picked from commit acc278762dd81a2921e1351b04048dd6617a6c92)